--- a/src/style.css
+++ b/src/style.css
@@ -6,6 +6,7 @@
     padding: 0;
     text-align: center;
     background-color: palevioletred;
+    color: aliceblue;
 }
 
 body{
@@ -15,6 +16,7 @@ body{
     width: 500px;
     margin: 0 auto;
     justify-content: center;
+    align-items: center;
 }
 
 .credit{
@@ -23,7 +25,7 @@ body{
 
 .city,
 .temp{
-    margin: 5rem;
+    margin: 3rem;
     padding: 2rem;
     outline: none;
     border: 0;
@@ -39,7 +41,6 @@ body{
     top: 7rem;
     border: 1px white solid;
     border-radius: 1rem;
-
 }
 
 .search button{
@@ -59,8 +60,14 @@ body{
 .search>*{
     height: 50px;
     background-color: aliceblue;
+    color: black;
 }
 
 .hide{
     display: none;
+}
+
+img{
+    height: 5rem;
+    width: 5rem;
 }
