--- a/src/style.css
+++ b/src/style.css
@@ -15,7 +15,7 @@ body{
     display: flex;
     flex-direction: column;
     height: 100vh;
-    width: 500px;
+    max-width: 500px;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
